--- a/awjf_wald_work_pub/build.gradle
+++ b/awjf_wald_work_pub/build.gradle
@@ -10,6 +10,8 @@ task transferAwjfWaldWork(type: Db2DbTask){
             new TransferSet('awjf_wald_work_pub_silvaprotecteinteilig_sturz_kor.sql',
                     'awjf_wald_work_pub.silvaprotecteinteilig_sturz_kor', true),
             new TransferSet('awjf_wald_work_pub_silvaprotecteinteilig_lawine_kor.sql',
-                    'awjf_wald_work_pub.silvaprotecteinteilig_lawine_kor', true)
+                    'awjf_wald_work_pub.silvaprotecteinteilig_lawine_kor', true),
+            new TransferSet('awjf_wald_work_pub_silvaprotecteinteilig_rutsch_kor.sql',
+                    'awjf_wald_work_pub.silvaprotecteinteilig_rutsch_kor', true)
     ];
 }
