--- a/awjf_wald_pub/build.gradle
+++ b/awjf_wald_pub/build.gradle
@@ -16,6 +16,7 @@ task transferAwjf(type: Db2DbTask){
                     'awjf_wald_pub.schutzwald_behandelte_flaeche', true),
             new TransferSet('awjf_wald_pub_schutzwald_status.sql', 'awjf_wald_pub.schutzwald_status', true),
             new TransferSet('awjf_wald_pub_schutzwald_massnahmenplanung.sql',
-                    'awjf_wald_pub.schutzwald_massnahmenplanung', true)
+                    'awjf_wald_pub.schutzwald_massnahmenplanung', true),
+            new TransferSet('awjf_wald_pub_sw_pdf.sql', 'awjf_wald_pub.sw_pdf', true)
     ];        
 }
