Adding agi_leitungskataster_pub.wasserleitung

--- a/agi_leitungskataster_pub/build.gradle
+++ b/agi_leitungskataster_pub/build.gradle
@@ -7,6 +7,8 @@ task transferAgiLeitungskataster(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('agi_leitungskataster_pub_lk_verfuegbarkeit.sql',
-                    'agi_leitungskataster_pub.lk_verfuegbarkeit', true)
+                    'agi_leitungskataster_pub.lk_verfuegbarkeit', true),
+            new TransferSet('agi_leitungskataster_pub_wasserleitung.sql', 'agi_leitungskataster_pub.wasserleitung',
+                    true)
     ];
 }
