--- a/agi_leitungskataster_pub/build.gradle
+++ b/agi_leitungskataster_pub/build.gradle
@@ -16,6 +16,8 @@ task transferAgiLeitungskataster(type: Db2DbTask){
             new TransferSet('agi_leitungskataster_pub_wasser_rohrleitungsteil.sql',
                     'agi_leitungskataster_pub.wasser_rohrleitungsteil', true),
             new TransferSet('agi_leitungskataster_pub_wasser_kabelpunkt.sql',
-                    'agi_leitungskataster_pub.wasser_kabelpunkt', true)
+                    'agi_leitungskataster_pub.wasser_kabelpunkt', true),
+            new TransferSet('agi_leitungskataster_pub_wasser_anlagen.sql', 'agi_leitungskataster_pub.wasser_anlagen',
+                    true)
     ];
 }
