adding agi_leitungskataster_pub.wasser_kabel

--- a/agi_leitungskataster_pub/build.gradle
+++ b/agi_leitungskataster_pub/build.gradle
@@ -20,6 +20,7 @@ task transferAgiLeitungskataster(type: Db2DbTask){
             new TransferSet('agi_leitungskataster_pub_wasser_anlagen.sql', 'agi_leitungskataster_pub.wasser_anlagen',
                     true),
             new TransferSet('agi_leitungskataster_pub_abwasser_bauwerk_text.sql',
-                    'agi_leitungskataster_pub.abwasser_bauwerk_text', true)
+                    'agi_leitungskataster_pub.abwasser_bauwerk_text', true),
+            new TransferSet('agi_leitungskataster_pub_wasser_kabel.sql', 'agi_leitungskataster_pub.wasser_kabel', true)
     ];
 }
