--- a/agi_leitungskataster_pub/build.gradle
+++ b/agi_leitungskataster_pub/build.gradle
@@ -21,6 +21,8 @@ task transferAgiLeitungskataster(type: Db2DbTask){
                     true),
             new TransferSet('agi_leitungskataster_pub_abwasser_bauwerk_text.sql',
                     'agi_leitungskataster_pub.abwasser_bauwerk_text', true),
-            new TransferSet('agi_leitungskataster_pub_wasser_kabel.sql', 'agi_leitungskataster_pub.wasser_kabel', true)
+            new TransferSet('agi_leitungskataster_pub_wasser_kabel.sql', 'agi_leitungskataster_pub.wasser_kabel', true),
+            new TransferSet('agi_leitungskataster_pub_abwasser_haltung.sql',
+                    'agi_leitungskataster_pub.abwasser_haltung', true)
     ];
 }
