--- a/agi_leitungskataster_pub/build.gradle
+++ b/agi_leitungskataster_pub/build.gradle
@@ -27,6 +27,8 @@ task transferAgiLeitungskataster(type: Db2DbTask){
             new TransferSet('agi_leitungskataster_pub_abwasser_schacht.sql',
                     'agi_leitungskataster_pub.abwasser_schacht', true),
             new TransferSet('agi_leitungskataster_pub_abwasser_bauwerk.sql',
-                    'agi_leitungskataster_pub.abwasser_bauwerk', true)
+                    'agi_leitungskataster_pub.abwasser_bauwerk', true),
+            new TransferSet('agi_leitungskataster_pub_elektrizitaet_trasse.sql',
+                    'agi_leitungskataster_pub.elektrizitaet_trasse', true)
     ];
 }
