adding agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze; renaming sql-Files

--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -6,9 +6,11 @@ task transferAgiHoheitsgrenzen(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('agi_hoheitsgrenzen_pub_gemeindegrenzen.sql',
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_gemeindegrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_bezirksgrenzen.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze', true)
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_bezirksgrenze.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze', true),
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_kantonsgrenze.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze', true)
     ];        
 }
