--- a/agi_av_kaso_abgleich_pub/build.gradle
+++ b/agi_av_kaso_abgleich_pub/build.gradle
@@ -6,6 +6,8 @@ task transferAgiAvKasoAbgleich(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('agi_av_kaso_abgleich_pub_differenzen.sql', 'agi_av_kaso_abgleich_pub.differenzen', true)
+            new TransferSet('agi_av_kaso_abgleich_pub_differenzen.sql', 'agi_av_kaso_abgleich_pub.differenzen', true),
+            new TransferSet('agi_av_kaso_abgleich_pub_uebersicht_des_vergleichs.sql',
+                    'agi_av_kaso_abgleich_pub.uebersicht_des_vergleichs', true)
     ];
 }
