--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -1,3 +1,6 @@
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.*
+
 description = """\n
 Importiert Nutzungsplanungs-INTERLIS-Daten in die Datenbank
 und baut diese in das Publikationsmodell um.
@@ -17,16 +20,22 @@ problematisch sein.
 apply plugin: 'ch.so.agi.gretl'
 
 ext {
-    sourceDbUrl = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
-    sourceDbUser = "datasync"
-    sourceDbPass = System.env.sourceDbPass    
+    sourceDbUrl = "jdbc:postgresql://192.168.50.5/sogis"
+    sourceDbUser = "ddluser"
+    sourceDbPass = "ddluser"
+    
+    //sourceDbUrl = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
+    //sourceDbUser = "datasync"
+    //sourceDbPass = System.env.sourceDbPass    
+    
     //sourceDbUrl = "jdbc:postgresql://geodb-dev.cgjofbdf5rqg.eu-central-1.rds.amazonaws.com:5432/xanadu2"
     //sourceDbUser = "stefan"
     //sourceDbPass = System.env.sourceDbPass    
     //sourceDbPass = "mspublic"    
-    //targetDbUrl = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
-    //targetDbUser = "datasync"
-    //targetDbPass = System.env.targetDbPass
+    
+    targetDbUrl = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
+    targetDbUser = "datasync"
+    targetDbPass = System.env.targetDbPass
     //targetDbPass = "mspublic"
     setNonExistingPropertyToUndefinedValue('xtf')
 }
@@ -48,16 +57,14 @@ task validateDataset(type: IliValidator, dependsOn: 'checkXtfName') {
     dataFiles = [xtf]
 }
 
-// Momentan noch *mit* Validierung.
-// Bis klar ist, was IliValidator-Task genau macht.
-task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkXtfName') {
+task replaceDataset (type: Ili2pgReplace, dependsOn: 'validateDataset') {
     description = "Ersetzt einen Datensatz (=XTF) in der PostgreSQL-Datenbank."
     database = [sourceDbUrl, sourceDbUser, sourceDbPass]
     dbschema = "arp_npl"
-    models = "SO_Nutzungsplanung_20170915"
-    disableValidation = false
+    models = "SO_Nutzungsplanung_20171118"
+    disableValidation = true
     dataset = file(xtf).getName().take(4)
-    dataFile = file(xtf)   
+    dataFile = xtf
 }
 
 // At the moment it's still sogis-Db to sogis-Db.
@@ -65,7 +72,7 @@ task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkXtfName') {
 task transformArpNpl(type: Db2DbTask) {
     description = "Datenumbau in das Publikationsmodell."
     sourceDb =  [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
+    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet("transform_arp_npl_pub_nutzungsplanung_grundnutzung_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', true),
             new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true),
@@ -79,19 +86,6 @@ task transformArpNpl(type: Db2DbTask) {
             new TransferSet("transform_arp_npl_pub_vs_perimeter_verfahrensstand.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_verfahrensstand', true),
             new TransferSet("transform_arp_npl_pub_vs_perimeter_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_beschriftung', true),
             new TransferSet("transform_arp_npl_pub_transfermetadaten.sql", 'arp_npl_pub.nutzungsplanung_transfermetadaten', true)
-
-            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_grundnutzung.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', true),
-            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true),
-            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_linie.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_linie', true),
-            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_punkt.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_punkt', true),
-            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_nutzungsplanung_beschriftung', true),
-            //new TransferSet("transform_arp_npl_pub_erschliessung_flaechenobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_flaechenobjekt', true),
-            //new TransferSet("transform_arp_npl_pub_erschliessung_linienobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_linienobjekt', true),
-            //new TransferSet("transform_arp_npl_pub_erschliessung_punktobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_punktobjekt', true),
-            //new TransferSet("transform_arp_npl_pub_erschliessung_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_beschriftung', true),
-            //new TransferSet("transform_arp_npl_pub_vs_perimeter_verfahrensstand.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_verfahrensstand', true),
-            //new TransferSet("transform_arp_npl_pub_vs_perimeter_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_beschriftung', true),
-            //new TransferSet("transform_arp_npl_pub_transfermetadaten.sql", 'arp_npl_pub.nutzungsplanung_transfermetadaten', true)
     ]
 }
 
