--- a/agi_grundbuchplan_pub/build.gradle
+++ b/agi_grundbuchplan_pub/build.gradle
@@ -9,6 +9,8 @@ task transferAgiGrundbuchplan(type: Db2DbTask){
             new TransferSet('agi_grundbuchplan_pub_liegenschaften_grenzpunkt.sql',
                     'agi_grundbuchplan_pub.liegenschaften_grenzpunkt', true),
             new TransferSet('agi_grundbuchplan_pub_liegenschaften_grundstueckpos.sql',
-                    'agi_grundbuchplan_pub.liegenschaften_grundstueckpos', true)
+                    'agi_grundbuchplan_pub.liegenschaften_grundstueckpos', true),
+            new TransferSet('agi_grundbuchplan_pub_liegenschaften_liegenschaft.sql',
+                    'agi_grundbuchplan_pub.liegenschaften_liegenschaft', true)
     ];
 }
