--- a/afu_abwasser_pub/build.gradle
+++ b/afu_abwasser_pub/build.gradle
@@ -1,8 +1,12 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
+
 
 defaultTasks 'transferAfuAbwasser'
 
-task transferAfuAbwasser(type: Db2DbTask){
+task transferAfuAbwasser(type: Db2Db){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
