--- a/afu_immissionskarten_pub/build.gradle
+++ b/afu_immissionskarten_pub/build.gradle
@@ -1,8 +1,11 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAfuImmissionskarten'
 
-task transferAfuImmissionskarten(type: Db2DbTask){
+task transferAfuImmissionskarten(type: Db2Db){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
