--- a/avt_verkehrszaehlung_pub/build.gradle
+++ b/avt_verkehrszaehlung_pub/build.gradle
@@ -1,8 +1,11 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAvtVerkehrszaehlung'
 
-task transferAvtVerkehrszaehlung(type: Db2DbTask){
+task transferAvtVerkehrszaehlung(type: Db2Db){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
