--- a/afu_gewschutz_export_ai/export/build.gradle
+++ b/afu_gewschutz_export_ai/export/build.gradle
@@ -1,4 +1,6 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+
+apply plugin: 'ch.so.agi.gretl'
 
 
 def bereichDelete = 'gsbereich_delete.sql'
@@ -13,17 +15,17 @@ def arealInsert = 'gsareal_insert.sql'
 
 defaultTasks 'clearStagingRows'
 
-task stageGsBereich(type: SqlExecutorTask){
+task stageGsBereich(type: SqlExecutor){
     database = [dbUrl, dbUser, dbPass]
     sqlFiles = [bereichDelete, bereichInsert]
 }
 
-task stageGsZone(type: SqlExecutorTask){
+task stageGsZone(type: SqlExecutor){
     database = [dbUrl, dbUser, dbPass]
     sqlFiles = [zoneDelete, zoneInsert]
 }
 
-task stageGsAreal(type: SqlExecutorTask){
+task stageGsAreal(type: SqlExecutor){
     database = [dbUrl, dbUser, dbPass]
     sqlFiles = [arealDelete, arealInsert]
 }
@@ -31,7 +33,7 @@ task stageGsAreal(type: SqlExecutorTask){
 task stageAll(dependsOn: [stageGsBereich, stageGsAreal, stageGsZone]){
 }
 
-task clearStagingRows(type: SqlExecutorTask, dependsOn: [stageGsBereich, stageGsAreal, stageGsZone]){
+task clearStagingRows(type: SqlExecutor, dependsOn: [stageGsBereich, stageGsAreal, stageGsZone]){
     database = [dbUrl, dbUser, dbPass]
     sqlFiles = [arealDelete, bereichDelete, zoneDelete]
 }
