--- a/agi_check_ili_export/build.gradle
+++ b/agi_check_ili_export/build.gradle
@@ -1,6 +1,7 @@
 import java.nio.file.Paths
 import ch.so.agi.gretl.tasks.*
-import ch.so.agi.gretl.steps.*
+
+apply plugin: 'ch.so.agi.gretl'
 
 description = """\n
 Exportiert sämtliche modellbasierten Datenerfassungen in eine 
