--- a/agi_hoehen_2014_pub/build.gradle
+++ b/agi_hoehen_2014_pub/build.gradle
@@ -7,6 +7,8 @@ task transferAgiHoehen2014(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('agi_hoehen_2014_pub_hoehenkurven_10m_vereinfacht.sql',
-                    'agi_hoehen_2014_pub.hoehenkurven_10m_vereinfacht', true)
+                    'agi_hoehen_2014_pub.hoehenkurven_10m_vereinfacht', true),
+            new TransferSet('agi_hoehen_2014_pub_lidarprodukte_lidarprodukt.sql',
+                    'agi_hoehen_2014_pub.lidarprodukte_lidarprodukt', true)
     ];
 }
