--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -1,8 +1,9 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
 
 defaultTasks 'transferAgiHoheitsgrenzen'
 
-task transferAgiHoheitsgrenzen(type: Db2DbTask){
+task transferAgiHoheitsgrenzen(type: Db2Db){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
