--- a/agi_ch_gemeinden/build.gradle
+++ b/agi_ch_gemeinden/build.gradle
@@ -1,7 +1,8 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.api.TransferSet
 import ch.so.agi.gretl.tasks.*
 import java.nio.file.Paths
 import de.undercouch.gradle.tasks.download.Download
+
 
 
 apply plugin: "de.undercouch.download"
@@ -67,7 +68,7 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipSwissBoundaries3D'){
 }
 
 
-task convertData(type: Db2DbTask, dependsOn: 'dbImport'){
+task convertData(type: Db2Db, dependsOn: 'dbImport'){
     description = "Convert swissBoundaries3D-Data"
     doLast {
         println "SwissBoundaries3D-Data are converted."
