adding grundnutzung_zonenflaeche, linienbezogene_festlegung and objektbezogene_festlegung

--- a/nplso2nplch/build.gradle
+++ b/nplso2nplch/build.gradle
@@ -7,5 +7,8 @@ defaultTasks 'transferNplso2Nplch'
 task transferNplso2Nplch(type: SqlExecutor){
     database = [targetDbUrl, targetDbUser, targetDbPass] //[sourceDbUrl, sourceDbUser, sourceDbPass]
     sqlFiles = ['arp_npl_mgdm_geobasisdaten_typ_kt.sql',
-                'arp_npl_mgdm_geobasisdaten_typ.sql'];
+                'arp_npl_mgdm_geobasisdaten_typ.sql',
+                'arp_npl_mgdm_geobasisdaten_grundnutzung_zonenflaeche.sql',
+                'arp_npl_mgdm_geobasisdaten_linienbezogene_festlegung.sql',
+                'arp_npl_mgdm_geobasisdaten_objektbezogene_festlegung.sql'];
 }
