--- a/agi_ch_gemeinden/build.gradle
+++ b/agi_ch_gemeinden/build.gradle
@@ -55,16 +55,15 @@ task unzipSwissBoundaries3D(type: Copy, dependsOn: 'unzipData'){
 task dbImport(type: Ili2pgImport, dependsOn: 'unzipSwissBoundaries3D'){
     description = "Import swissBoundaries3D-Data into database"
     doLast {
-        println "Data imported into db: " + targetDbUrl
+        println "Data imported into db: " + sourceDbUrl
     }
-    database = [targetDbUrl, targetDbUser, targetDbPass]
+    database = [sourceDbUrl, sourceDbUser, sourceDbPass]
     dbschema = "agi_swissboundaries3d"
     models = "swissBOUNDARIES3D_ili2_LV95_V1_3"
     disableValidation = false
     dataFile = file(xtfFilePath)
     deleteData = true
     strokeArcs = true
-    //missing parameters: createEnumTabs and nameByTopic
 }
 
 
@@ -74,8 +73,8 @@ task convertData(type: Db2Db, dependsOn: 'dbImport'){
         println "SwissBoundaries3D-Data are converted."
     }
     finalizedBy 'removeFiles'
-    //todo: change to sourceDbUrl, sourcDbUser, sourceDbPass
-    sourceDb = [targetDbUrl, targetDbUser, targetDbPass]
+
+    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('bezirke.sql', 'agi_swissboundaries3d_pub.swissboundaries3d_bezirk', true),
