--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -13,6 +13,8 @@ task transferArpRichtplan(type: Db2Db){
             new TransferSet('arp_richtplan_2017_pub_siedlungstrennguertel.sql',
                     'arp_richtplan_2017_pub.siedlungstrennguertel', true),
             new TransferSet('arp_richtplan_2017_pub_entwicklungsgebiete_arbeiten.sql',
-                    'arp_richtplan_2017_pub.entwicklungsgebiete_arbeiten', true)
+                    'arp_richtplan_2017_pub.entwicklungsgebiete_arbeiten', true),
+            new TransferSet('arp_richtplan_2017_pub_sondernutzungsgebiet.sql',
+                    'arp_richtplan_2017_pub.sondernutzungsgebiet', true)
     ];
 }
