--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -15,6 +15,7 @@ task transferArpRichtplan(type: Db2Db){
             new TransferSet('arp_richtplan_2017_pub_entwicklungsgebiete_arbeiten.sql',
                     'arp_richtplan_2017_pub.entwicklungsgebiete_arbeiten', true),
             new TransferSet('arp_richtplan_2017_pub_sondernutzungsgebiet.sql',
-                    'arp_richtplan_2017_pub.sondernutzungsgebiet', true)
+                    'arp_richtplan_2017_pub.sondernutzungsgebiet', true),
+            new TransferSet('arp_richtplan_2017_pub_juraschutz.sql', 'arp_richtplan_2017_pub.juraschutz', true)
     ];
 }
