--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -9,13 +9,15 @@ task transferArpRichtplan(type: Db2Db){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('arp_richtplan_2017_pub_grundnutzung.sql', 'arp_richtplan_2017_pub.grundnutzung', true),
+            //new TransferSet('arp_richtplan_2017_pub_grundnutzung.sql', 'arp_richtplan_2017_pub.grundnutzung', true),
             new TransferSet('arp_richtplan_2017_pub_siedlungstrennguertel.sql',
                     'arp_richtplan_2017_pub.siedlungstrennguertel', true),
             new TransferSet('arp_richtplan_2017_pub_entwicklungsgebiete_arbeiten.sql',
                     'arp_richtplan_2017_pub.entwicklungsgebiete_arbeiten', true),
             new TransferSet('arp_richtplan_2017_pub_sondernutzungsgebiet.sql',
                     'arp_richtplan_2017_pub.sondernutzungsgebiet', true),
-            new TransferSet('arp_richtplan_2017_pub_juraschutz.sql', 'arp_richtplan_2017_pub.juraschutz', true)
+            new TransferSet('arp_richtplan_2017_pub_juraschutz.sql', 'arp_richtplan_2017_pub.juraschutz', true),
+            new TransferSet('arp_richtplan_2017_pub_kant_uferschutzzone.sql',
+                    'arp_richtplan_2017_pub.kant_uferschutzzone', true)
     ];
 }
