--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -18,6 +18,7 @@ task transferArpRichtplan(type: Db2Db){
                     'arp_richtplan_2017_pub.sondernutzungsgebiet', true),
             new TransferSet('arp_richtplan_2017_pub_juraschutz.sql', 'arp_richtplan_2017_pub.juraschutz', true),
             new TransferSet('arp_richtplan_2017_pub_kant_uferschutzzone.sql',
-                    'arp_richtplan_2017_pub.kant_uferschutzzone', true)
+                    'arp_richtplan_2017_pub.kant_uferschutzzone', true),
+            new TransferSet('arp_richtplan_2017_pub_natgebiete.sql', 'arp_richtplan_2017_pub.natgebiete', true)
     ];
 }
