--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -19,6 +19,8 @@ task transferArpRichtplan(type: Db2Db){
             new TransferSet('arp_richtplan_2017_pub_juraschutz.sql', 'arp_richtplan_2017_pub.juraschutz', true),
             new TransferSet('arp_richtplan_2017_pub_kant_uferschutzzone.sql',
                     'arp_richtplan_2017_pub.kant_uferschutzzone', true),
-            new TransferSet('arp_richtplan_2017_pub_natgebiete.sql', 'arp_richtplan_2017_pub.natgebiete', true)
+            //new TransferSet('arp_richtplan_2017_pub_natgebiete.sql', 'arp_richtplan_2017_pub.natgebiete', true),
+            new TransferSet('arp_richtplan_2017_pub_kant_vorranggebiete.sql',
+                    'arp_richtplan_2017_pub.kant_vorranggebiete', true)
     ];
 }
