--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -21,6 +21,7 @@ task transferArpRichtplan(type: Db2Db){
                     'arp_richtplan_2017_pub.kant_uferschutzzone', true),
             //new TransferSet('arp_richtplan_2017_pub_natgebiete.sql', 'arp_richtplan_2017_pub.natgebiete', true),
             new TransferSet('arp_richtplan_2017_pub_kant_vorranggebiete.sql',
-                    'arp_richtplan_2017_pub.kant_vorranggebiete', true)
+                    'arp_richtplan_2017_pub.kant_vorranggebiete', true),
+            new TransferSet('arp_richtplan_2017_pub_witischutzzone.sql', 'arp_richtplan_2017_pub.witischutzzone', true)
     ];
 }
