--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -22,6 +22,7 @@ task transferArpRichtplan(type: Db2Db){
             //new TransferSet('arp_richtplan_2017_pub_natgebiete.sql', 'arp_richtplan_2017_pub.natgebiete', true),
             new TransferSet('arp_richtplan_2017_pub_kant_vorranggebiete.sql',
                     'arp_richtplan_2017_pub.kant_vorranggebiete', true),
-            new TransferSet('arp_richtplan_2017_pub_witischutzzone.sql', 'arp_richtplan_2017_pub.witischutzzone', true)
+            //new TransferSet('arp_richtplan_2017_pub_witischutzzone.sql', 'arp_richtplan_2017_pub.witischutzzone', true),
+            new TransferSet('arp_richtplan_2017_pub_bln.sql', 'arp_richtplan_2017_pub.bln', true)
     ];
 }
