--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -26,6 +26,8 @@ task transferArpRichtplan(type: Db2Db){
             new TransferSet('arp_richtplan_2017_pub_bln.sql', 'arp_richtplan_2017_pub.bln', true),
             new TransferSet('arp_richtplan_2017_pub_wildtierkorridor.sql', 'arp_richtplan_2017_pub.wildtierkorridor',
                     true),
-            new TransferSet('arp_richtplan_2017_pub_naturpark.sql', 'arp_richtplan_2017_pub.naturpark', true)
+            new TransferSet('arp_richtplan_2017_pub_naturpark.sql', 'arp_richtplan_2017_pub.naturpark', true),
+            new TransferSet('arp_richtplan_2017_pub_strassen_bestehend.sql',
+                    'arp_richtplan_2017_pub.strassen_bestehend', true)
     ];
 }
