--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -28,6 +28,8 @@ task transferArpRichtplan(type: Db2Db){
                     true),
             new TransferSet('arp_richtplan_2017_pub_naturpark.sql', 'arp_richtplan_2017_pub.naturpark', true),
             new TransferSet('arp_richtplan_2017_pub_strassen_bestehend.sql',
-                    'arp_richtplan_2017_pub.strassen_bestehend', true)
+                    'arp_richtplan_2017_pub.strassen_bestehend', true),
+            new TransferSet('arp_richtplan_2017_pub_nationalstrasse_vorhaben.sql',
+                    'arp_richtplan_2017_pub.nationalstrasse_vorhaben', true)
     ];
 }
