--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -30,6 +30,8 @@ task transferArpRichtplan(type: Db2Db){
             new TransferSet('arp_richtplan_2017_pub_strassen_bestehend.sql',
                     'arp_richtplan_2017_pub.strassen_bestehend', true),
             new TransferSet('arp_richtplan_2017_pub_nationalstrasse_vorhaben.sql',
-                    'arp_richtplan_2017_pub.nationalstrasse_vorhaben', true)
+                    'arp_richtplan_2017_pub.nationalstrasse_vorhaben', true),
+            new TransferSet('arp_richtplan_2017_pub_kantonsstrasse_vorhaben.sql',
+                    'arp_richtplan_2017_pub.kantonsstrasse_vorhaben', true)
     ];
 }
