--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -41,6 +41,8 @@ task transferArpRichtplan(type: Db2Db){
             new TransferSet('arp_richtplan_2017_pub_uebertragungsleitung_swissgrid.sql',
                     'arp_richtplan_2017_pub.uebertragungsleitung_swissgrid', true),
             new TransferSet('arp_richtplan_2017_pub_uebertragungsleitung_sbb.sql',
-                    'arp_richtplan_2017_pub.uebertragungsleitung_sbb', true)
+                    'arp_richtplan_2017_pub.uebertragungsleitung_sbb', true),
+            new TransferSet('arp_richtplan_2017_pub_uebertragungsleitung_aek.sql', 
+                    'arp_richtplan_2017_pub.uebertragungsleitung_aek', true)
     ];
 }
