--- a/arp_richtplan_2017_pub/build.gradle
+++ b/arp_richtplan_2017_pub/build.gradle
@@ -42,7 +42,8 @@ task transferArpRichtplan(type: Db2Db){
                     'arp_richtplan_2017_pub.uebertragungsleitung_swissgrid', true),
             new TransferSet('arp_richtplan_2017_pub_uebertragungsleitung_sbb.sql',
                     'arp_richtplan_2017_pub.uebertragungsleitung_sbb', true),
-            new TransferSet('arp_richtplan_2017_pub_uebertragungsleitung_aek.sql', 
-                    'arp_richtplan_2017_pub.uebertragungsleitung_aek', true)
+            new TransferSet('arp_richtplan_2017_pub_uebertragungsleitung_aek.sql',
+                    'arp_richtplan_2017_pub.uebertragungsleitung_aek', true),
+            new TransferSet('arp_richtplan_2017_pub_gasleitung_gvm.sql', 'arp_richtplan_2017_pub.gasleitung_gvm', true)
     ];
 }
