--- a/agi_adressen_pub/build.gradle
+++ b/agi_adressen_pub/build.gradle
@@ -10,6 +10,8 @@ task transferAgiAdressen(type: Db2Db){
             new TransferSet('agi_adressen_pub_richtung_strassenachse.sql', 'agi_adressen_pub.richtung_strassenachse',
                     true),
             new TransferSet('agi_adressen_pub_verbindungslinie_strasse_hausnummer.sql',
-                    'agi_adressen_pub.verbindungslinie_strasse_hausnummer', true)
+                    'agi_adressen_pub.verbindungslinie_strasse_hausnummer', true),
+            new TransferSet('agi_adressen_pub_postleitzahlkreise.sql', 'agi_adressen_pub.postleitzahlkreise', true),
+            new TransferSet('agi_adressen_pub_benanntes_gebiet.sql', 'agi_adressen_pub.benanntes_gebiet', true)
     ];
 }
